--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ g[id^="BudGroup"] g[id^="BudGroup"] g[id^="Bud"],
 }
 
 .music-waves span {
-  display: block;
+  display: none;
   width: 3px; /* Grosor de la barrita */
   height: 6px;
   background: #ff0033; /* Color rojo san valentin */
