--- a/index.html
+++ b/index.html
@@ -141,15 +141,15 @@ svg#flower-frame{
 
 .content{
   position: absolute;
-  top: 50%;
+  top: 65%;
   left: 50%;
-  transform: translate(-50%, -50%)translateY(490px);
-  z-index: 10;
-  width: min(280px, 80%);
+  transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
+  width: 80%;
+  max-width: 320px;
   gap: 12px;
 }
   
